# medintel-AI

./: .dockerignore  .gitignore  DEPLOYMENT.md  Dockerfile  README.md  jupyter_notebook.ipynb  main.py  pyproject.toml  render-build.sh  render.yaml
.ipynb_checkpoints/: README-checkpoint.md  jupyter_notebook-checkpoint.ipynb
backend/: .env.example  main.py  requirements.txt
backend/database/: feedback_schema.py  history_schema.py  history_store.json  history_store.py  mongodb.py  user_schema.py
backend/ml/: README.md  build_scalers.py  clean_combined_datasets.py  clean_combined_heart.py  clean_combined_kidney.py  combine_diabetes_datasets.py  combine_heart_datasets.py  combine_kidney_datasets.py  default_values.py  evaluate.py  evaluation_results.txt  feature_engineering.py  feature_mapping.py  predict.py  shap_explainer.py  test_prediction.py  train.py
backend/models/: chat.py
backend/pdf_processing/: lab_value_parser.py  ocr.py  pdf_parser.py  report_extractor.py  report_identifier.py
backend/rag/: chatbot.py  config.py  embeddings.py  ingest.py  prompts.py  rag_pipeline.py  retriever.py  vector_store.py
backend/reports/: generate_report.py  report_prompt.py
backend/routers/: chat.py  chat_dummy.py  history.py  predict.py  prediction_engine.py  upload.py
backend/uploads/: Cardio-Sample-Report.txt  Chronic Kidney Disease2.txt  DUMMY_CKD_REPORT.txt  (+4 more)
datasets/: clean_kidney_dataset.csv  combined_kidney_dataset.csv  diabetes_data.csv  processed_dataset.csv  processed_heart.csv  processed_kidney.csv
frontend/: .env.example  .env.production  package-lock.json  package.json
(+49 files in other folders)
