[project]
name = "medintel-ai-1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "faiss-cpu>=1.14.3",
    "fastapi>=0.139.0",
    "google-generativeai>=0.8.6",
    "huggingface-hub>=1.22.0",
    "langchain>=1.3.11",
    "langchain-community>=0.4.2",
    "langchain-google-genai>=4.2.6",
    "numpy>=2.5.1",
    "pydantic>=2.13.4",
    "pymupdf>=1.28.0",
    "pypdf>=6.14.2",
    "python-dotenv>=1.2.2",
    "sentence-transformers>=5.6.0",
    "tiktoken>=0.13.0",
    "uvicorn>=0.50.1",
]
