[project]
name = "medintel-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.15.0",
    "crawl4ai>=0.9.0",
    "ipykernel>=7.3.0",
    "joblib>=1.5.3",
    "pandas>=3.0.3",
    "scikit-learn>=1.9.0",
    "shap>=0.52.0",
    "xgboost>=3.3.0",
name = "medintel-ai-1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "faiss-cpu>=1.14.3",
    "fastapi>=0.139.0",
    "google-generativeai>=0.8.6",
    "huggingface-hub>=1.22.0",
    "langchain>=1.3.11",
    "langchain-community>=0.4.2",
    "langchain-google-genai>=4.2.6",
    "numpy>=2.5.1",
    "pydantic>=2.13.4",
    "pymupdf>=1.28.0",
    "pypdf>=6.14.2",
    "python-dotenv>=1.2.2",
    "sentence-transformers>=5.6.0",
    "tiktoken>=0.13.0",
    "uvicorn>=0.50.1",
]
